<?xml version="1.0"?>
<package format="3">
  <name>lanelet2_extension</name>
  <version>1.12.0</version>
  <description>The lanelet2_extension pacakge contains libraries to handle Lanelet2 format data.</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apach 2</license>

  <buildtool_depend condition="$ROS_VERSION == 1" >catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 1 and $LANELET2_EXTENSION_LOGGER_TYPE == 0" >roscpp</depend>
  <depend condition="$ROS_VERSION == 2 and $LANELET2_EXTENSION_LOGGER_TYPE == 0" >rclcpp</depend>
  <depend>geographiclib</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_validation</depend>
  <depend>pugixml-dev</depend>
  <depend>hardcoded_params</depend>
</package>
