<?xml version="1.0"?>
<package format="2">
  <name>lane_planner_ros1</name>
  <version>1.12.0</version>
  <description>The lane_planner package for ROS1</description>
  <maintainer email="tomo@axe-inc.co.jp">Tomomi HORII</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>gnss</depend>
  <depend>lanelet2_extension</depend>
  <depend>libwaypoint_follower</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tablet_socket_msgs</depend>
  <depend>vector_map</depend>
  <depend>autoware_lanelet2_ros_interface</depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <build_depend>carma_cmake_common</build_depend>
</package>
