<?xml version="1.0"?>
<package format="3">
  <name>jsk_common_msgs</name>
  <version>4.3.2</version>
  <description>
   <p>Metapackage that contains commonly used messages for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_common_msgs</url>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_common_msgs</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_common_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>posedetection_msgs</exec_depend>
  <exec_depend>jsk_footstep_msgs</exec_depend>
  <exec_depend>jsk_hark_msgs</exec_depend>
  <exec_depend>speech_recognition_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
