<package format="3">
  <name>jsk_footstep_msgs</name>
  <version>4.3.2</version>
  <description>jsk_footstep_msgs</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_footstep_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">>message_generation</build_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

  <depend condition="$ROS_VERSION == 2">action_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>

  </export>
</package>

