<?xml version="1.0"?>
<package format="3">
  <name>jsk_gui_msgs</name>
  <author>chen</author>
  <version>4.3.2</version>
  <description>jsk_gui_msgs</description>
  <maintainer email="murase@jsk.imi.i.u-tokyo.ac.jp">KazutoMurase</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>